--- a/connections/main.html
+++ b/connections/main.html
@@ -24,10 +24,12 @@
         <h1 id="title"><img src="static/optiver.png" height="20px"></h1>
 
         <div id="main_body">
-          <form name="myForm" onsubmit="return validateForm()">Username: <input type="text" name="fname">
+          <form name="myForm" onsubmit="validateForm()">
+            Username:
+            <input type="text" name="fname">
             <input type="submit" value="Submit">
           </form>
-          <h1>Username: <span id='username'></span></h1>
+          <h1 id="user">Username: <span id='username'>G25_TERMINATOR</span></h1>
           <div class="vertical">
 
             <div class="squarecontainer">
